--- a/web/Properties/launchSettings.json
+++ b/web/Properties/launchSettings.json
@@ -15,10 +15,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "entrusted.web": {
+    "Entrusted.Web": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "redisUrl":"http://localhost:6379",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
