--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.13"
+    "mongodb": "^3.1.13",
+    "uuid-mongodb": "^1.1.3"
   }
 }
