--- a/web/ClientApp/package.json
+++ b/web/ClientApp/package.json
@@ -30,6 +30,7 @@
     "jquery": "3.3.1",
     "ngx-mask": "^7.4.2",
     "popper.js": "^1.14.3",
+    "quill": "1.3.6",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
