--- a/web/ClientApp/package.json
+++ b/web/ClientApp/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "jquery": "3.3.1",
     "ngx-mask": "^7.4.2",
+    "octicons": "^8.4.1",
     "popper.js": "^1.14.3",
     "quill": "1.3.6",
     "rxjs": "^6.0.0",
